<resources>

    <string name="app_name">News System</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_start_main">StartMainActivity</string>
    <string name="startApp">Start Run</string>
    <string name="news">news</string>
    <string name="olds">view</string>
    <string name="air">air</string>
    <string name="fnews">blog</string>
    <string name="tip_wait">Please wait...</string>
    <string name="tip_error">no new data</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="love">Love</string>
    <string name="top">Top</string>
    <string name="down">Down</string>
    <string name="end">The last page ...</string>
    <string name="more">More</string>
    <string name="clientprotocolexception">clientprotocolerror</string>
    <string name="socketexception">socketerror</string>
    <string name="sockettimeoutexception">sockettimeout</string>
    <string name="exception">unkownerror</string>
    <string name="unsupportedencodingexception">unsupportedencoding</string>
    <string name="nomore">nomore</string>
    <string name="jsonexception">jsonerror</string>
    <string name="parseexception">parseerror</string>
    <string name="pull_to_refresh_pull_label">refresh</string>
    <string name="pull_to_refresh_refresh_lasttime">refresh time</string>
    <string name="more_data">more</string>
    <string name="load_more">load more</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="tweet_pub_head_title">发布微博</string>
     <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="ui_insert_image">插入图片</string>
    <string name="delete_image">删除图片</string>
    <string name="sure">确认</string>
    <string name="cancle">取消</string>
    <string name="belogin">正在登陆...</string>
    <string name="bereg">正在注册...</string>
    <string name="tip">提示</string>
    <string name="login">登陆</string>
    <string name="userinfor">用户信息</string>
    <string name="golden">定海神针</string>
    <string name="about">关于</string>
      <string name="message">本软件由Quark工作室制作发布.本软件为免费共享软件，供用户免费获取使用。使用过程中如产生的流量费用由运营商收取。本软件使用资源皆来自于互联网，欢迎反馈信息与投稿，请联系管理员。mailto:deonchen@protonmail.com</string>
    <string name="version">Version</string>
    <string name="loginview">用户登录</string>
    <string name="regview">用户注册</string>
    <string name="emailinuse">Email已使用</string>
    <string name="mobileinuse">手机号已使用</string>
</resources>